force-app/main/default/objects/OA_Company_Profile__c/OA_Company_Profile__c.object-meta.xml
<CustomObject>
    <description>Enterprise Knowledge Foundation (Program 021): the canonical living intelligence profile for any organization (self, partner, prime, customer, agency). Links to Account + OA_Discovered_Organization__c (reuses identity, no duplication) and adds the knowledge/capability/past-performance/AI-summary layer that Opportunity/Proposal/Capture/Partner Intelligence consume. Governed: AI writes narrative + confidence only.</description>
    <label>Company Profile</label>
    <pluralLabel>Company Profiles</pluralLabel>
    <nameField><displayFormat>CP-{0000000}</displayFormat><label>Profile #</label><type>AutoNumber</type></nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>