force-app/main/default/objects/OA_Company_Profile__c/fields/Account__c.field-meta.xml
<CustomField><fullName>Account__c</fullName><label>Account</label><type>Lookup</type><referenceTo>Account</referenceTo><relationshipLabel>Company Profiles</relationshipLabel><relationshipName>Company_Profiles_Account</relationshipName><deleteConstraint>SetNull</deleteConstraint></CustomField>