force-app/main/default/objects/OA_Company_Profile__c/fields/Agencies_Served__c.field-meta.xml
<CustomField>
    <fullName>Agencies_Served__c</fullName>
    <label>Agencies Served</label>
    <length>255</length>
    <type>Text</type>
</CustomField>