force-app/main/default/objects/OA_Company_Profile__c/fields/AI_Company_Summary__c.field-meta.xml
<CustomField><fullName>AI_Company_Summary__c</fullName><label>AI Company Summary</label><type>LongTextArea</type><length>32768</length><visibleLines>6</visibleLines></CustomField>