force-app/main/default/objects/OA_Company_Profile__c/fields/AI_Gaps__c.field-meta.xml
<CustomField>
    <fullName>AI_Gaps__c</fullName>
    <label>AI Gaps</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>