force-app/main/default/objects/OA_Company_Profile__c/fields/AI_Model__c.field-meta.xml
<CustomField><fullName>AI_Model__c</fullName><label>AI Model</label><type>Text</type><length>80</length></CustomField>