force-app/main/default/objects/OA_Company_Profile__c/fields/AI_Strengths__c.field-meta.xml
<CustomField><fullName>AI_Strengths__c</fullName><label>AI Strengths</label><type>LongTextArea</type><length>32768</length><visibleLines>6</visibleLines></CustomField>