force-app/main/default/objects/OA_Company_Profile__c/fields/AI_Total_Tokens__c.field-meta.xml
<CustomField><fullName>AI_Total_Tokens__c</fullName><label>AI Total Tokens</label><type>Number</type><precision>5</precision><scale>1</scale></CustomField>