force-app/main/default/objects/OA_Company_Profile__c/fields/AI_Weaknesses__c.field-meta.xml
<CustomField><fullName>AI_Weaknesses__c</fullName><label>AI Weaknesses</label><type>LongTextArea</type><length>32768</length><visibleLines>6</visibleLines></CustomField>