force-app/main/default/objects/OA_Company_Profile__c/fields/Certifications__c.field-meta.xml
<CustomField><fullName>Certifications__c</fullName><label>Certifications</label><type>LongTextArea</type><length>32768</length><visibleLines>6</visibleLines></CustomField>