force-app/main/default/objects/OA_Company_Profile__c/fields/Contract_Vehicles__c.field-meta.xml
<CustomField><fullName>Contract_Vehicles__c</fullName><label>Contract Vehicles</label><type>LongTextArea</type><length>32768</length><visibleLines>6</visibleLines></CustomField>