force-app/main/default/objects/OA_Company_Profile__c/fields/Discovered_Organization__c.field-meta.xml
<CustomField><fullName>Discovered_Organization__c</fullName><label>Discovered Organization</label><type>Lookup</type><referenceTo>OA_Discovered_Organization__c</referenceTo><relationshipLabel>Company Profiles</relationshipLabel><relationshipName>Company_Profiles_DiscOrg</relationshipName><deleteConstraint>SetNull</deleteConstraint></CustomField>