force-app/main/default/objects/OA_Company_Profile__c/fields/Evidence_Document_Count__c.field-meta.xml
<CustomField>
    <fullName>Evidence_Document_Count__c</fullName>
    <label>Evidence Document Count</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>