force-app/main/default/objects/OA_Company_Profile__c/fields/Has_Capability_Statement__c.field-meta.xml
<CustomField><fullName>Has_Capability_Statement__c</fullName><label>Has Capability Statement</label><type>Checkbox</type><defaultValue>false</defaultValue></CustomField>