force-app/main/default/objects/OA_Company_Profile__c/fields/Industries__c.field-meta.xml
<CustomField><fullName>Industries__c</fullName><label>Industries</label><type>Text</type><length>255</length></CustomField>