force-app/main/default/objects/OA_Company_Profile__c/fields/Knowledge_Completeness__c.field-meta.xml
<CustomField>
    <fullName>Knowledge_Completeness__c</fullName>
    <label>Knowledge Completeness</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>