force-app/main/default/objects/OA_Company_Profile__c/fields/Knowledge_Confidence__c.field-meta.xml
<CustomField>
    <fullName>Knowledge_Confidence__c</fullName>
    <label>Knowledge Confidence</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
                <default>true</default>
                <label>Medium</label>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>