force-app/main/default/objects/OA_Company_Profile__c/fields/Last_AI_Refresh__c.field-meta.xml
<CustomField>
    <fullName>Last_AI_Refresh__c</fullName>
    <label>Last AI Refresh</label>
    <type>DateTime</type>
</CustomField>