force-app/main/default/objects/OA_Company_Profile__c/fields/Locations__c.field-meta.xml
<CustomField>
    <fullName>Locations__c</fullName>
    <label>Locations</label>
    <length>255</length>
    <type>Text</type>
</CustomField>