force-app/main/default/objects/OA_Company_Profile__c/fields/NAICS_Codes__c.field-meta.xml
<CustomField><fullName>NAICS_Codes__c</fullName><label>NAICS Codes</label><type>Text</type><length>255</length></CustomField>