force-app/main/default/objects/OA_Company_Profile__c/fields/Organization_Name__c.field-meta.xml
<CustomField><fullName>Organization_Name__c</fullName><label>Organization Name</label><type>Text</type><length>255</length></CustomField>