force-app/main/default/objects/OA_Company_Profile__c/fields/Past_Performance__c.field-meta.xml
<CustomField>
    <fullName>Past_Performance__c</fullName>
    <label>Past Performance</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>