force-app/main/default/objects/OA_Company_Profile__c/fields/Prime_Experience__c.field-meta.xml
<CustomField><fullName>Prime_Experience__c</fullName><label>Prime Experience</label><type>LongTextArea</type><length>32768</length><visibleLines>6</visibleLines></CustomField>