force-app/main/default/objects/OA_Company_Profile__c/fields/Profile_Type__c.field-meta.xml
<CustomField>
    <fullName>Profile_Type__c</fullName>
    <label>Profile Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Self</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
                <default>true</default>
                <label>Partner</label>
            </value>
            <value>
                <fullName>Prime Contractor</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Federal Agency</fullName>
            </value>
            <value>
                <fullName>State Agency</fullName>
            </value>
            <value>
                <fullName>Prospect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>