force-app/main/default/objects/OA_Company_Profile__c/fields/PSC_Codes__c.field-meta.xml
<CustomField><fullName>PSC_Codes__c</fullName><label>PSC Codes</label><type>Text</type><length>255</length></CustomField>