force-app/main/default/objects/OA_Company_Profile__c/fields/Relationship_Strength__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Strength__c</fullName>
    <label>Relationship Strength</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>