force-app/main/default/objects/OA_Company_Profile__c/fields/Socioeconomic_Status__c.field-meta.xml
<CustomField><fullName>Socioeconomic_Status__c</fullName><label>Socioeconomic Status</label><type>Text</type><length>255</length></CustomField>