force-app/main/default/objects/OA_Company_Profile__c/fields/Status__c.field-meta.xml
<CustomField>
<fullName>Status__c</fullName><label>Status</label><type>Picklist</type><valueSet><valueSetDefinition><sorted>false</sorted>
<value><fullName>Draft</fullName><default>false</default><label>Draft</label></value>
<value><fullName>Active</fullName><default>true</default><label>Active</label></value>
<value><fullName>Archived</fullName><default>false</default><label>Archived</label></value>
</valueSetDefinition></valueSet></CustomField>