force-app/main/default/objects/OA_Company_Profile__c/fields/Subcontract_History__c.field-meta.xml
<CustomField><fullName>Subcontract_History__c</fullName><label>Subcontract History</label><type>LongTextArea</type><length>32768</length><visibleLines>6</visibleLines></CustomField>