force-app/main/default/objects/OA_Company_Profile__c/fields/Teaming_History__c.field-meta.xml
<CustomField><fullName>Teaming_History__c</fullName><label>Teaming History</label><type>LongTextArea</type><length>32768</length><visibleLines>6</visibleLines></CustomField>