force-app/main/default/objects/OA_Company_Profile__c/fields/Technology_Stack__c.field-meta.xml
<CustomField>
    <fullName>Technology_Stack__c</fullName>
    <label>Technology Stack</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>